Changelog
=========


1.0.4 (unreleased)
------------------

- Change string expr. to python expr in addressblock detail view. 
  With Chameleon a string expression is evaluated different than without (& --> &amp;).
  [mathias.leimgruber]


1.0.3 (2016-11-01)
------------------

- Fix map marker on addressblock detail view.
  [mathias.leimgruber]


1.0.2 (2016-10-26)
------------------

- Make geo location adapter more robust for publisher compatibility. [jone]


1.0.1 (2016-08-26)
------------------

- Block is no longer searchable and will no longer be
  included in the navigation.
  [mbaechtold]

- Use mapblock js integration to prevent duplicated googlemaps api calls.
  [mathias.leimgruber]


1.0.0 (2016-08-10)
------------------

- Nothing changed yet